@startuml ClassDiagram_Overview
' v0.1.15 - パターン実行条件、計算パターン、内部角度管理の追加
' ステレオタイプの色設定
skinparam class {
    BackgroundColor<<MonoBehaviour>> LightBlue
    BackgroundColor<<ScriptableObject>> LightGreen
    BackgroundColor<<Interface>> LightYellow
    BackgroundColor<<static>> LightGray
    BackgroundColor<<enum>> LightCoral
}

' --- インターフェース定義 ---
interface IMovable <<Interface>>
interface IShootable <<Interface>>

' --- マネージャー ---
class SystemManager <<MonoBehaviour>>
class DanmakuGameManager <<MonoBehaviour>>
class GameParameterManager <<MonoBehaviour>>

' --- エンティティ基盤 ---
abstract class GameEntityController <<MonoBehaviour>>
class GameEntity <<ScriptableObject>>
class GameEntityProperty <<ScriptableObject>>

' --- Player ---
class PlayerController <<MonoBehaviour>>
class Player <<ScriptableObject>>
class PlayerProperty <<ScriptableObject>>

' --- Enemy ---
class EnemyController <<MonoBehaviour>>
class Enemy <<ScriptableObject>>
class EnemyProperty <<ScriptableObject>>

' --- Bullet ---
class BulletController <<MonoBehaviour>>
class Bullet <<ScriptableObject>>
class BulletProperty <<ScriptableObject>>

' --- パターン関連 ---
abstract class PatternBase <<ScriptableObject>>
abstract class MovePatternBase <<ScriptableObject>>
abstract class ShootPatternBase <<ScriptableObject>>
abstract class TriggerPatternBase <<ScriptableObject>>
abstract class "CalculatePatternBase<T>" as CalculatePatternBase_T <<ScriptableObject>>
class LoopPattern <<ScriptableObject>>
class ParallelPattern <<ScriptableObject>>
class SequencePattern <<ScriptableObject>>
class BranchPattern <<ScriptableObject>>
abstract class EmissionShape <<ScriptableObject>>

' --- GameParameter関連 ---
abstract class GameParameter <<ScriptableObject>>
class AngleParameter <<ScriptableObject>>
class "GameParameterReference<T>" as GameParameterReference_T <<struct>>

' --- その他 ---
class EnemyLifeGaugeController <<MonoBehaviour>>
class AngleUtility <<static>>
class PlayerUtility <<static>>

' --- 継承関係 ---
GameEntityController <|-- PlayerController
GameEntityController <|-- EnemyController
GameEntityController <|-- BulletController
GameEntity <|-- Player
GameEntity <|-- Enemy
GameEntity <|-- Bullet
GameEntityProperty <|-- PlayerProperty
GameEntityProperty <|-- EnemyProperty
GameEntityProperty <|-- BulletProperty
PatternBase <|-- MovePatternBase
PatternBase <|-- ShootPatternBase
PatternBase <|-- TriggerPatternBase
PatternBase <|-- CalculatePatternBase_T
PatternBase <|-- LoopPattern
PatternBase <|-- ParallelPattern
PatternBase <|-- SequencePattern
PatternBase <|-- BranchPattern
GameParameter <|-- AngleParameter
GameParameterReference_T ..> GameParameter
IMovable <|.. GameEntityController
IShootable <|.. GameEntityController

' --- 関連 ---
PlayerController ..> DanmakuGameManager : "calls"
GameEntityController o-- GameEntity : " _entity"
GameEntity o-- "1" GameEntityProperty : " property"
GameEntityProperty o-- PatternBase : "ShootPattern"
GameEntityProperty o-- PatternBase : "MovePattern"
PatternBase ..> GameEntityController : "uses"
PatternBase o-- "*" GameParameter : "uses"
TriggerPatternBase o-- PatternBase : "_triggerPattern"
TriggerPatternBase ..> GameEntityController : "monitors events"
CalculatePatternBase_T o-- "1" GameParameter : "_targetParameter"
LoopPattern o-- PatternBase
ParallelPattern o-- PatternBase
SequencePattern o-- PatternBase
ShootPatternBase o-- EmissionShape : "emissionShape"
ShootPatternBase ..> AngleParameter : "uses"
EmissionShape ..> AngleParameter : "uses"
BulletController ..> EnemyController : "calls TakeDamage"
EnemyController ..> EnemyLifeGaugeController : "creates"
AngleUtility ..> PlayerController : "finds"
PlayerUtility ..> PlayerController : "finds"
ShootPatternBase ..> PlayerUtility : "uses"

@enduml
